@@ -2,6 +2,7 @@
 
   fix segfault in new "acl_group_sloppy" code if a group doesn't exist
   configure defaults changed to enable syslog, enable docs, and disable filesync
+  pelog now correctly restores previous alarm handler (Sandia)
 
 2.0.0p5
 
